syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Sales.RecieptGroupDuration.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "RecieptGroupDurationProto";
option objc_class_prefix = "HLW";


package Sales;

service RecieptGroupDuration{
  rpc GetRecieptGroupDuration(RecieptGroupDurationRequest) returns(RecieptGroupDurationReplyList);
}

message RecieptGroupDurationRequest{
  string ccGorohs = 1;
}

message RecieptGroupDurationReply{

  int32	RecieptGroupDurationID = 1;
  int32	RecieptDurationID = 2;
  int32	GroupID = 3;


}

message RecieptGroupDurationReplyList{
  repeated RecieptGroupDurationReply RecieptGroupDurations = 1;
}